force-app/main/default/objects/leaseworks__Rent_Slip_Line_Item__c/leaseworks__Rent_Slip_Line_Item__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Rent Slip Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rent Slip Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>