force-app/main/default/objects/leaseworks__Rent_Slip_Line_Item__c/fields/leaseworks__Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount__c</fullName>
    <label>Line Amount($)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>