force-app/main/default/objects/leaseworks__Rent_Slip_Line_Item__c/fields/leaseworks__Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Line_Amount__c</fullName>
    <description>Indicates the amount charged for this line item. Used when multi-currency is enabled.</description>
    <formula>leaseworks__Amount__c</formula>
    <inlineHelpText>Indicates the amount charged for this line item. Used when multi-currency is enabled.</inlineHelpText>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>