force-app/main/default/objects/leaseworks__Rent_Slip_Line_Item__c/fields/leaseworks__Line_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Line_Type__c</fullName>
    <label>Line Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
                <default>true</default>
                <label>Rent</label>
            </value>
            <value>
                <fullName>Deferred - Rent</fullName>
            </value>
            <value>
                <fullName>HL/SL-Rent</fullName>
            </value>
            <value>
                <fullName>Rebate Rental</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>PBH Fixed Rent</fullName>
            </value>
            <value>
                <fullName>PBH Assembly Rent</fullName>
            </value>
            <value>
                <fullName>PBH Rent Adjustment</fullName>
            </value>
            <value>
                <fullName>PBH Total Adjustment</fullName>
            </value>
            <value>
                <fullName>Engine Rental Credit</fullName>
                <label>Engine Rental Credit - Engine 1</label>
            </value>
            <value>
                <fullName>Engine Rental Credit - Engine 2</fullName>
            </value>
            <value>
                <fullName>Fixed Rent</fullName>
                <isActive>false</isActive>
                <label>Fixed Rent</label>
            </value>
            <value>
                <fullName>Floating Rent</fullName>
                <isActive>false</isActive>
                <label>Floating Rent</label>
            </value>
            <value>
                <fullName>Manual Rent</fullName>
                <isActive>false</isActive>
                <label>Manual Rent</label>
            </value>
            <value>
                <fullName>Seasonal Rent</fullName>
                <isActive>false</isActive>
                <label>Seasonal Rent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>