force-app/main/default/objects/leaseworks__Rent_Slip_Line_Item__c/fields/leaseworks__Rent_Slip__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Slip__c</fullName>
    <label>Rent Slip</label>
    <referenceTo>leaseworks__Rent__c</referenceTo>
    <relationshipName>Rent_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>