force-app/main/default/objects/leaseworks__Rent_Slip_Line_Item__c/fields/Rent_Slip_External_Key_Local__c.field-meta.xml
<CustomField>
    <fullName>Rent_Slip_External_Key_Local__c</fullName>
    <description>This was created at the time of Implementation</description>
    <label>Rent Slip External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>